--- a/LANGGRAPH/langgraph_components/7. ReActAgents.ipynb
+++ b/LANGGRAPH/langgraph_components/7. ReActAgents.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,9 @@
     "os.environ[\"GROQ_API_KEY\"]=os.getenv(\"GROQ_API_KEY\")\n",
     "os.environ[\"LANGCHAIN_API_KEY\"]=os.getenv(\"LANGCHAIN_API_KEY\")\n",
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"]=\"ReAct-agent\"\n"
+    "os.environ[\"LANGCHAIN_PROJECT\"]=\"ReAct-agent\"\n",
+    "\n",
+    "\n"
    ]
   },
   {
